@@ -559,6 +559,7 @@
 #define SETTINGS_LATESTHOST_USERNAME                "latesthosts/%1_username"
 #define SETTINGS_LATESTHOST_PASSWORD                "latesthosts/%1_password"
 #define SETTINGS_LATESTHOST_NICKNAME                "latesthosts/%1_nickname"
+#define SETTINGS_LATESTHOST_STATUSMSG                "latesthosts/%1_status-message"
 #define SETTINGS_LATESTHOST_CHANNEL                 "latesthosts/%1_channel"
 #define SETTINGS_LATESTHOST_CHANNELPASSWD           "latesthosts/%1_chanpassword"
 
@@ -574,6 +575,7 @@
 #define SETTINGS_SERVERENTRIES_USERNAME             "serverentries/%1_username"
 #define SETTINGS_SERVERENTRIES_PASSWORD             "serverentries/%1_password"
 #define SETTINGS_SERVERENTRIES_NICKNAME             "serverentries/%1_nickname"
+#define SETTINGS_SERVERENTRIES_STATUSMSG             "serverentries/%1_status-message"
 #define SETTINGS_SERVERENTRIES_LASTCHANNEL              "serverentries/%1_join-last-channel"
 #define SETTINGS_SERVERENTRIES_CHANNEL              "serverentries/%1_channel"
 #define SETTINGS_SERVERENTRIES_CHANNELPASSWD        "serverentries/%1_chanpassword"
