@@ -8,6 +8,8 @@ Default Qt Client
 - Ctrl+Alt+Shift+C to copy all chat list history
 - Ctrl+Shift+R to generate tt:// URL for current channel
 - Bitrate for OPUS is limited to 6-510 in Channel dialog
+- Status message shown in Preferences dialog
+- Ability to define status message for each server
 - Fixed "Speak Client Statistics", "Enable/Disable Text-To-Speech Events", "Speak User/Channel Info" and "Speak Channel Statistics" availability if TTS events are only sent using push notification
 - Fixed idle status message not being restored after network reconnection
 - Fixed chat history name not retranslated on language change
